--- a/github /workflows/deploy.yml
+++ b/github /workflows/deploy.yml
@@ -1,25 +1,25 @@
-name: Deploy to GitHub Pages
+name: Deploy Dashboard Layout
 
 on:
-  push:
+  push: # main 브랜치에 푸시될 때마다 워크플로우 자동 실행
     branches:
-      - main # main 브랜치에 푸시될 때마다 워크플로우 실행
+      - main
+  workflow_dispatch: # GitHub Actions 탭에서 수동 실행 가능하도록 유지
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest # 최신 우분투 환경에서 실행
+  deploy:
+    runs-on: ubuntu-latest # 실행 환경은 최신 Ubuntu
+
+    permissions:
+      contents: write # 이 워크플로우가 gh-pages 브랜치에 파일을 쓸 수 있도록 권한 부여
 
     steps:
-    - name: Checkout repository # 저장소 코드 체크아웃
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4 # 저장소 코드 체크아웃 (main 브랜치의 파일들을 가져옴)
 
-    # - name: Setup Node.js (필요 시 주석 해제하여 사용)
-    #   uses: actions/setup-node@v4
-    #   with:
-    #     node-version: '20'
-
-    - name: Deploy to GitHub Pages # GitHub Pages에 배포
-      uses: peaceiris/actions-gh-pages@v4
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }} # GitHub Pages 배포를 위한 토큰
-        publish_dir: ./ # 프로젝트의 루트 디렉토리를 배포
+      - name: Deploy to GitHub Pages # GitHub Pages 배포 스텝
+        uses: peaceiris/actions-gh-pages@v3 # 사용하는 액션 버전 (v3)
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }} # GitHub가 자동으로 제공하는 토큰 사용
+          publish_dir: ./ # 현재 워크플로우가 실행되는 저장소의 루트 디렉토리에 있는 파일들을 배포 대상으로 삼음
+          keep_files: true # 기존 gh-pages 브랜치의 파일들을 유지하고 변경된 파일만 업데이트
+          publish_branch: gh-pages # 배포된 파일들을 'gh-pages' 브랜치로 푸시
